Fix XML config issue. Improve UserSearch GUI. Fix popover z-index for UserSearch modal

--- a/src/main/webapp/assets/css/tatami-custom-mobile.less
+++ b/src/main/webapp/assets/css/tatami-custom-mobile.less
@@ -567,7 +567,7 @@ body {
 	}	
 }
 
-#userSearchPanel
+#userSearchPanel,#userSuggestions
 {
 	background-color: white !important;
 	#userSearchTitle
@@ -585,9 +585,45 @@ body {
 	}
 	#userSearchList tr
 	{
+		
 		@media screen and (min-width: 25em)
 		{
-			font-size: 1.4em !important;
+			font-size: 1.2em !important;
 		}
 	}
+
+	.internalUserTemplateTable
+	{
+		td:nth-of-type(1)
+		{
+			width: 8%;
+			.middle;
+		}
+		td:nth-of-type(2)
+		{
+			width: 20%;
+			.left;
+			.middle;
+		}
+		td:nth-of-type(3)
+		{
+			width: 62%;
+			.center;
+			.middle;
+		}
+		td:nth-of-type(4)
+		{
+			width: 10%;
+			.center;
+			.middle;
+		}	
+	}	
+	.tweetFriend
+	{
+		.center;
+		.middle;
+		width: 10%;
+	}	
+	
 }
+
