--- a/src/main/webapp/assets/css/tatami-custom.less
+++ b/src/main/webapp/assets/css/tatami-custom.less
@@ -297,7 +297,35 @@ body {
 	.tweetFriend
 	{
 		float: right;
+		width: 10%;
 	}
+}
+
+.internalUserTemplateTable
+{
+	td:nth-of-type(1)
+	{
+		width: 8%;
+		.middle;
+	}
+	td:nth-of-type(2)
+	{
+		width: 15%;
+		.left;
+		.middle;
+	}
+	td:nth-of-type(3)
+	{
+		width: 67%;
+		.left;
+		.middle;
+	}
+	td:nth-of-type(4)
+	{
+		width: 10%;
+		.center;
+		.middle;
+	}	
 }
 
 #userDetailsPanel, #tweetsPanel
